# sps30driver

./: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
src/: hal.c  main.c  sps30.h
